--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="hero"></div>
 
     <div class="content">
-        <section id="search-engine-optimization" class="search-engine-optimization">
+        <section id="search-engine-optimization">
             <img src="./Develop/assets/images/search-engine-optimization.jpg"
             alt="Search Engine Optimization"
             class="float-left" />
@@ -39,11 +39,11 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <!--  -->
+        
        
 
 
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" >
             <img src="./Develop/assets/images/online-reputation-management.jpg" 
             alt="online reputation management"
             class="float-left" />
@@ -54,7 +54,7 @@
         </section>
 
 
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" >
             <img src="./Develop/assets/images/social-media-marketing.jpg" 
             alt="social media market"
             class="float-left" />
